--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "torchvision>=0.20.0",
     "sqlalchemy>=2.0.0",
     "aiosqlite>=0.20.0",
+    "greenlet>=3.0.0",
     "pydantic>=2.10.0",
     "pydantic-settings>=2.6.0",
 ]
