--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,10 @@ dependencies = [
     "greenlet>=3.0.0",
     "pydantic>=2.10.0",
     "pydantic-settings>=2.6.0",
+    "passlib>=1.7.4",
+    "python-jose[cryptography]>=3.5.0",
+    "bcrypt>=5.0.0",
+    "email-validator>=2.3.0",
 ]
 
 [tool.uv]
