--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "pydantic-settings>=2.6.0",
     "passlib>=1.7.4",
     "python-jose[cryptography]>=3.5.0",
-    "bcrypt>=5.0.0",
+    "bcrypt==4.0.1",
     "email-validator>=2.3.0",
 ]
 
